--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,8 @@ dependencies:
   - backports=1.0=pyhd8ed1ab_3
   - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
   - beautifulsoup4=4.12.2=pyha770c72_0
+  - black=23.7.0=py311h267d04e_1
+  - black-jupyter=23.7.0=hd8ed1ab_1
   - bleach=6.0.0=pyhd8ed1ab_0
   - brotli=1.0.9=h1a8c8d9_9
   - brotli-bin=1.0.9=h1a8c8d9_9
@@ -53,6 +55,7 @@ dependencies:
   - ipykernel=6.25.0=pyh5fb750a_0
   - ipython=8.14.0=pyhd1c38e8_0
   - isoduration=20.11.0=pyhd8ed1ab_0
+  - isort=5.12.0=pyhd8ed1ab_1
   - jedi=0.19.0=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.3.0=pyhd8ed1ab_1
@@ -106,6 +109,7 @@ dependencies:
   - mpfr=4.2.0=he09a6ba_0
   - mpmath=1.3.0=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
+  - mypy_extensions=1.0.0=pyha770c72_0
   - nbclient=0.8.0=pyhd8ed1ab_0
   - nbconvert-core=7.7.3=pyhd8ed1ab_0
   - nbformat=5.9.2=pyhd8ed1ab_0
@@ -123,6 +127,7 @@ dependencies:
   - pandas=2.0.3=py311h9e438b8_1
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.3=pyhd8ed1ab_0
+  - pathspec=0.11.2=pyhd8ed1ab_0
   - pexpect=4.8.0=pyh1a96a4e_2
   - pickleshare=0.7.5=py_1003
   - pillow=10.0.0=py311h095fde6_0
@@ -176,6 +181,7 @@ dependencies:
   - threadpoolctl=3.2.0=pyha21a80b_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=he1e0b03_0
+  - tokenize-rt=5.2.0=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.3.2=py311heffc1b2_0
   - tqdm=4.65.0=pyhd8ed1ab_1
