--- a/environment.yml
+++ b/environment.yml
@@ -37,8 +37,9 @@ dependencies:
   - debugpy=1.6.8=py311ha891d26_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
+  - docopt=0.6.2=py_1
   - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.1.2=pyhd8ed1ab_0
+  - exceptiongroup=1.1.3=pyhd8ed1ab_0
   - executing=1.2.0=pyhd8ed1ab_0
   - filelock=3.12.2=pyhd8ed1ab_0
   - flit-core=3.9.0=pyhd8ed1ab_0
@@ -51,31 +52,32 @@ dependencies:
   - idna=3.4=pyhd8ed1ab_0
   - importlib-metadata=6.8.0=pyha770c72_0
   - importlib_metadata=6.8.0=hd8ed1ab_0
-  - importlib_resources=6.0.0=pyhd8ed1ab_1
-  - ipykernel=6.25.0=pyh5fb750a_0
+  - importlib_resources=6.0.1=pyhd8ed1ab_0
+  - ipykernel=6.25.1=pyh5fb750a_0
   - ipython=8.14.0=pyhd1c38e8_0
   - isoduration=20.11.0=pyhd8ed1ab_0
   - isort=5.12.0=pyhd8ed1ab_1
   - jedi=0.19.0=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
-  - joblib=1.3.0=pyhd8ed1ab_1
+  - joblib=1.3.2=pyhd8ed1ab_0
   - json5=0.9.14=pyhd8ed1ab_0
   - jsonpointer=2.0=py_0
-  - jsonschema=4.18.6=pyhd8ed1ab_0
+  - jsonschema=4.19.0=pyhd8ed1ab_1
   - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.18.6=pyhd8ed1ab_0
+  - jsonschema-with-format-nongpl=4.19.0=pyhd8ed1ab_1
   - jupyter-lsp=2.2.0=pyhd8ed1ab_0
   - jupyter_client=8.3.0=pyhd8ed1ab_0
   - jupyter_core=5.3.1=py311h267d04e_0
-  - jupyter_events=0.7.0=pyhd8ed1ab_1
-  - jupyter_server=2.7.0=pyhd8ed1ab_0
+  - jupyter_events=0.7.0=pyhd8ed1ab_2
+  - jupyter_server=2.7.1=pyhd8ed1ab_0
   - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
-  - jupyterlab=4.0.4=pyhd8ed1ab_0
+  - jupyterlab=4.0.5=pyhd8ed1ab_0
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
   - jupyterlab_server=2.24.0=pyhd8ed1ab_0
   - kiwisolver=1.4.4=py311hd6ee22a_1
   - lcms2=2.15=hd835a16_1
   - lerc=4.0.0=h9a09cb3_0
+  - libabseil=20230125.3=cxx17_h13dd4ca_0
   - libblas=3.9.0=17_osxarm64_openblas
   - libbrotlicommon=1.0.9=h1a8c8d9_9
   - libbrotlidec=1.0.9=h1a8c8d9_9
@@ -92,6 +94,7 @@ dependencies:
   - libopenblas=0.3.23=openmp_hc731615_0
   - libpng=1.6.39=h76d750c_0
   - libprotobuf=3.21.12=hb5ab8b9_0
+  - libsentencepiece=0.1.99=hfc4930b_1
   - libsodium=1.0.18=h27ca646_1
   - libsqlite=3.42.0=hb31c410_0
   - libtiff=4.5.1=h23a1a89_0
@@ -104,14 +107,14 @@ dependencies:
   - matplotlib=3.7.2=py311ha1ab1f8_0
   - matplotlib-base=3.7.2=py311h3bc9839_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=3.0.0=pyhd8ed1ab_0
+  - mistune=3.0.1=pyhd8ed1ab_0
   - mpc=1.3.1=h91ba8db_0
   - mpfr=4.2.0=he09a6ba_0
   - mpmath=1.3.0=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mypy_extensions=1.0.0=pyha770c72_0
   - nbclient=0.8.0=pyhd8ed1ab_0
-  - nbconvert-core=7.7.3=pyhd8ed1ab_0
+  - nbconvert-core=7.7.4=pyhd8ed1ab_0
   - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h7ea286d_0
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
@@ -122,7 +125,7 @@ dependencies:
   - numpy=1.25.2=py311hb8f3215_0
   - openjpeg=2.5.0=hbc2ba62_2
   - openssl=3.1.2=h53f4e23_0
-  - overrides=7.3.1=pyhd8ed1ab_0
+  - overrides=7.4.0=pyhd8ed1ab_0
   - packaging=23.1=pyhd8ed1ab_0
   - pandas=2.0.3=py311h9e438b8_1
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -143,7 +146,7 @@ dependencies:
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.15.1=pyhd8ed1ab_0
+  - pygments=2.16.1=pyhd8ed1ab_0
   - pyobjc-core=9.2=py311hb702dc4_0
   - pyobjc-framework-cocoa=9.2=py311hb702dc4_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
@@ -157,18 +160,21 @@ dependencies:
   - pytorch=2.0.0=cpu_generic_py311ha38e979_1
   - pytz=2023.3=pyhd8ed1ab_0
   - pyyaml=6.0=py311he2be06e_5
-  - pyzmq=25.1.0=py311hb1af645_0
+  - pyzmq=25.1.1=py311hb1af645_0
   - readline=8.2=h92ec313_1
-  - referencing=0.30.0=pyhd8ed1ab_0
-  - regex=2023.6.3=py311heffc1b2_0
+  - referencing=0.30.2=pyhd8ed1ab_0
+  - regex=2023.8.8=py311heffc1b2_0
   - requests=2.31.0=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rpds-py=0.9.2=py311h0563b04_0
-  - ruff=0.0.282=py311h07901e9_0
+  - ruff=0.0.284=py311h07901e9_0
   - scikit-learn=1.3.0=py311hf0b18b8_0
   - scipy=1.11.1=py311h93d07a4_0
   - send2trash=1.8.2=pyhd1c38e8_0
+  - sentencepiece=0.1.99=ha1ab1f8_1
+  - sentencepiece-python=0.1.99=py311h3cc9b6a_1
+  - sentencepiece-spm=0.1.99=hfc4930b_1
   - setuptools=68.0.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.5.1=h156473d_2
@@ -184,7 +190,7 @@ dependencies:
   - tokenize-rt=5.2.0=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.3.2=py311heffc1b2_0
-  - tqdm=4.65.0=pyhd8ed1ab_1
+  - tqdm=4.66.1=pyhd8ed1ab_0
   - traitlets=5.9.0=pyhd8ed1ab_0
   - typing-extensions=4.7.1=hd8ed1ab_0
   - typing_extensions=4.7.1=pyha770c72_0
@@ -196,7 +202,7 @@ dependencies:
   - webcolors=1.13=pyhd8ed1ab_0
   - webencodings=0.5.1=py_1
   - websocket-client=1.6.1=pyhd8ed1ab_0
-  - wheel=0.41.0=pyhd8ed1ab_0
+  - wheel=0.41.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb547adb_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.6=h57fd34a_0
