--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - absl-py=1.4.0=pyhd8ed1ab_0
+  - aiohttp=3.8.5=py311heffc1b2_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
   - anyio=3.7.1=pyhd8ed1ab_0
   - appnope=0.1.3=pyhd8ed1ab_0
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
@@ -10,6 +13,7 @@ dependencies:
   - arrow=1.2.3=pyhd8ed1ab_0
   - asttokens=2.2.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
   - attrs=23.1.0=pyh71513ae_1
   - babel=2.12.1=pyhd8ed1ab_1
   - backcall=0.2.0=pyh9f0ad1d_0
@@ -19,20 +23,24 @@ dependencies:
   - black=23.7.0=py311h267d04e_1
   - black-jupyter=23.7.0=hd8ed1ab_1
   - bleach=6.0.0=pyhd8ed1ab_0
+  - blinker=1.6.2=pyhd8ed1ab_0
   - brotli=1.0.9=h1a8c8d9_9
   - brotli-bin=1.0.9=h1a8c8d9_9
   - brotli-python=1.0.9=py311ha397e9f_9
   - bzip2=1.0.8=h3422bc3_4
+  - c-ares=1.19.1=hb547adb_0
   - ca-certificates=2023.7.22=hf0a4a13_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
+  - cachetools=5.3.1=pyhd8ed1ab_0
   - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py311hae827db_3
   - charset-normalizer=3.2.0=pyhd8ed1ab_0
-  - click=8.1.6=unix_pyh707e725_0
+  - click=8.1.7=unix_pyh707e725_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.1.4=pyhd8ed1ab_0
   - contourpy=1.1.0=py311he4fd1f5_0
+  - cryptography=41.0.3=py311h5fb2c35_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - debugpy=1.6.8=py311ha891d26_0
   - decorator=5.1.1=pyhd8ed1ab_0
@@ -43,12 +51,17 @@ dependencies:
   - executing=1.2.0=pyhd8ed1ab_0
   - filelock=3.12.2=pyhd8ed1ab_0
   - flit-core=3.9.0=pyhd8ed1ab_0
-  - fonttools=4.42.0=py311heffc1b2_0
+  - fonttools=4.42.1=py311heffc1b2_0
   - fqdn=1.5.1=pyhd8ed1ab_0
   - freetype=2.12.1=hd633e50_1
+  - frozenlist=1.4.0=py311heffc1b2_0
   - gensim=4.3.1=py311h4eec4a9_1
   - gmp=6.2.1=h9f76cd9_0
   - gmpy2=2.1.2=py311h2ba9262_1
+  - google-auth=2.17.3=pyh1a96a4e_0
+  - google-auth-oauthlib=1.0.0=pyhd8ed1ab_1
+  - grpcio=1.54.3=py311ha891d26_0
+  - icu=72.1=he12128b_0
   - idna=3.4=pyhd8ed1ab_0
   - importlib-metadata=6.8.0=pyha770c72_0
   - importlib_metadata=6.8.0=hd8ed1ab_0
@@ -89,6 +102,8 @@ dependencies:
   - libffi=3.4.2=h3422bc3_5
   - libgfortran=5.0.0=12_3_0_hd922786_1
   - libgfortran5=12.3.0=ha3a6a3e_1
+  - libgrpc=1.54.3=h0a338ca_0
+  - libiconv=1.17=he4db4b2_0
   - libjpeg-turbo=2.1.5.1=h1a8c8d9_0
   - liblapack=3.9.0=17_osxarm64_openblas
   - libopenblas=0.3.23=openmp_hc731615_0
@@ -101,8 +116,12 @@ dependencies:
   - libuv=1.44.2=hb547adb_1
   - libwebp-base=1.3.1=hb547adb_0
   - libxcb=1.15=hf346824_0
+  - libxml2=2.11.5=he3bdae6_0
+  - libxslt=1.1.37=h1728932_1
   - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=16.0.6=h1c12783_0
+  - lxml=4.9.3=py311hbafe683_0
+  - markdown=3.4.4=pyhd8ed1ab_0
   - markupsafe=2.1.3=py311heffc1b2_0
   - matplotlib=3.7.2=py311ha1ab1f8_0
   - matplotlib-base=3.7.2=py311h3bc9839_0
@@ -111,6 +130,7 @@ dependencies:
   - mpc=1.3.1=h91ba8db_0
   - mpfr=4.2.0=he09a6ba_0
   - mpmath=1.3.0=pyhd8ed1ab_0
+  - multidict=6.0.4=py311he2be06e_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mypy_extensions=1.0.0=pyha770c72_0
   - nbclient=0.8.0=pyhd8ed1ab_0
@@ -123,6 +143,7 @@ dependencies:
   - nomkl=1.0=h5ca1d4c_0
   - notebook-shim=0.2.3=pyhd8ed1ab_0
   - numpy=1.25.2=py311hb8f3215_0
+  - oauthlib=3.2.2=pyhd8ed1ab_0
   - openjpeg=2.5.0=hbc2ba62_2
   - openssl=3.1.2=h53f4e23_0
   - overrides=7.4.0=pyhd8ed1ab_0
@@ -138,17 +159,23 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - platformdirs=3.10.0=pyhd8ed1ab_0
   - pooch=1.7.0=pyha770c72_3
+  - portalocker=2.7.0=py311h267d04e_0
   - prometheus_client=0.17.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.39=pyha770c72_0
   - prompt_toolkit=3.0.39=hd8ed1ab_0
+  - protobuf=4.21.12=py311ha397e9f_0
   - psutil=5.9.5=py311he2be06e_0
   - pthread-stubs=0.4=h27ca646_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.16.1=pyhd8ed1ab_0
+  - pyjwt=2.8.0=pyhd8ed1ab_0
   - pyobjc-core=9.2=py311hb702dc4_0
   - pyobjc-framework-cocoa=9.2=py311hb702dc4_0
+  - pyopenssl=23.2.0=pyhd8ed1ab_1
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.4=h47c9636_0_cpython
@@ -159,23 +186,28 @@ dependencies:
   - python_abi=3.11=3_cp311
   - pytorch=2.0.0=cpu_generic_py311ha38e979_1
   - pytz=2023.3=pyhd8ed1ab_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyyaml=6.0=py311he2be06e_5
   - pyzmq=25.1.1=py311hb1af645_0
+  - re2=2023.03.02=hc5e2d97_0
   - readline=8.2=h92ec313_1
   - referencing=0.30.2=pyhd8ed1ab_0
   - regex=2023.8.8=py311heffc1b2_0
   - requests=2.31.0=pyhd8ed1ab_0
+  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rpds-py=0.9.2=py311h0563b04_0
-  - ruff=0.0.284=py311h07901e9_0
+  - rsa=4.9=pyhd8ed1ab_0
+  - ruff=0.0.285=py311h07901e9_0
+  - sacrebleu=2.3.1=pyhd8ed1ab_0
   - scikit-learn=1.3.0=py311hf0b18b8_0
-  - scipy=1.11.1=py311h93d07a4_0
+  - scipy=1.11.2=py311h93d07a4_0
   - send2trash=1.8.2=pyhd1c38e8_0
   - sentencepiece=0.1.99=ha1ab1f8_1
   - sentencepiece-python=0.1.99=py311h3cc9b6a_1
   - sentencepiece-spm=0.1.99=hfc4930b_1
-  - setuptools=68.0.0=pyhd8ed1ab_0
+  - setuptools=68.1.2=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.5.1=h156473d_2
   - smart_open=6.3.0=pyhd8ed1ab_1
@@ -183,15 +215,19 @@ dependencies:
   - soupsieve=2.3.2.post1=pyhd8ed1ab_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - sympy=1.12=pypyh9d50eac_103
+  - tabulate=0.9.0=pyhd8ed1ab_1
+  - tensorboard=2.14.0=pyhd8ed1ab_0
+  - tensorboard-data-server=0.7.0=py311h507f6e9_0
   - terminado=0.17.1=pyhd1c38e8_0
   - threadpoolctl=3.2.0=pyha21a80b_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=he1e0b03_0
   - tokenize-rt=5.2.0=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.3.2=py311heffc1b2_0
+  - tornado=6.3.3=py311heffc1b2_0
   - tqdm=4.66.1=pyhd8ed1ab_0
   - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing=3.10.0.0=pyhd8ed1ab_0
   - typing-extensions=4.7.1=hd8ed1ab_0
   - typing_extensions=4.7.1=pyha770c72_0
   - typing_utils=0.1.0=pyhd8ed1ab_0
@@ -202,12 +238,15 @@ dependencies:
   - webcolors=1.13=pyhd8ed1ab_0
   - webencodings=0.5.1=py_1
   - websocket-client=1.6.1=pyhd8ed1ab_0
+  - werkzeug=2.3.7=pyhd8ed1ab_0
   - wheel=0.41.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb547adb_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.6=h57fd34a_0
   - yaml=0.2.5=h3422bc3_2
+  - yarl=1.9.2=py311heffc1b2_0
   - zeromq=4.3.4=hbdafb3b_1
   - zipp=3.16.2=pyhd8ed1ab_0
+  - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.2=h4f39d0f_7
 prefix: /opt/homebrew/Caskroom/miniconda/base/envs/cs224n
