--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - aiosignal=1.3.1=pyhd8ed1ab_0
   - anyio=3.7.1=pyhd8ed1ab_0
   - appnope=0.1.3=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py311he2be06e_3
   - arrow=1.2.3=pyhd8ed1ab_0
   - asttokens=2.2.1=pyhd8ed1ab_0
@@ -55,13 +55,13 @@ dependencies:
   - fqdn=1.5.1=pyhd8ed1ab_0
   - freetype=2.12.1=hd633e50_1
   - frozenlist=1.4.0=py311heffc1b2_0
-  - gensim=4.3.1=py311h4eec4a9_1
+  - gensim=4.3.2=py311h9e438b8_0
   - gmp=6.2.1=h9f76cd9_0
   - gmpy2=2.1.2=py311h2ba9262_1
   - google-auth=2.17.3=pyh1a96a4e_0
   - google-auth-oauthlib=1.0.0=pyhd8ed1ab_1
   - grpcio=1.54.3=py311ha891d26_0
-  - icu=72.1=he12128b_0
+  - icu=73.2=hc8870d7_0
   - idna=3.4=pyhd8ed1ab_0
   - importlib-metadata=6.8.0=pyha770c72_0
   - importlib_metadata=6.8.0=hd8ed1ab_0
@@ -87,7 +87,7 @@ dependencies:
   - jupyterlab=4.0.5=pyhd8ed1ab_0
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
   - jupyterlab_server=2.24.0=pyhd8ed1ab_0
-  - kiwisolver=1.4.4=py311hd6ee22a_1
+  - kiwisolver=1.4.5=py311he4fd1f5_0
   - lcms2=2.15=hd835a16_1
   - lerc=4.0.0=h9a09cb3_0
   - libabseil=20230125.3=cxx17_h13dd4ca_0
@@ -108,15 +108,15 @@ dependencies:
   - liblapack=3.9.0=17_osxarm64_openblas
   - libopenblas=0.3.23=openmp_hc731615_0
   - libpng=1.6.39=h76d750c_0
-  - libprotobuf=3.21.12=hb5ab8b9_0
+  - libprotobuf=3.21.12=ha614eb4_1
   - libsentencepiece=0.1.99=hfc4930b_1
   - libsodium=1.0.18=h27ca646_1
-  - libsqlite=3.42.0=hb31c410_0
-  - libtiff=4.5.1=h23a1a89_0
+  - libsqlite=3.43.0=hb31c410_0
+  - libtiff=4.5.1=h23a1a89_1
   - libuv=1.44.2=hb547adb_1
   - libwebp-base=1.3.1=hb547adb_0
   - libxcb=1.15=hf346824_0
-  - libxml2=2.11.5=he3bdae6_0
+  - libxml2=2.11.5=h25269f3_1
   - libxslt=1.1.37=h1728932_1
   - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=16.0.6=h1c12783_0
@@ -178,7 +178,7 @@ dependencies:
   - pyopenssl=23.2.0=pyhd8ed1ab_1
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.11.4=h47c9636_0_cpython
+  - python=3.11.5=h47c9636_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-fastjsonschema=2.18.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -187,7 +187,7 @@ dependencies:
   - pytorch=2.0.0=cpu_generic_py311ha38e979_1
   - pytz=2023.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py311he2be06e_5
+  - pyyaml=6.0.1=py311heffc1b2_0
   - pyzmq=25.1.1=py311hb1af645_0
   - re2=2023.03.02=hc5e2d97_0
   - readline=8.2=h92ec313_1
@@ -199,7 +199,7 @@ dependencies:
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rpds-py=0.9.2=py311h0563b04_0
   - rsa=4.9=pyhd8ed1ab_0
-  - ruff=0.0.285=py311h07901e9_0
+  - ruff=0.0.286=py311h07901e9_0
   - sacrebleu=2.3.1=pyhd8ed1ab_0
   - scikit-learn=1.3.0=py311hf0b18b8_0
   - scipy=1.11.2=py311h93d07a4_0
@@ -237,9 +237,9 @@ dependencies:
   - wcwidth=0.2.6=pyhd8ed1ab_0
   - webcolors=1.13=pyhd8ed1ab_0
   - webencodings=0.5.1=py_1
-  - websocket-client=1.6.1=pyhd8ed1ab_0
+  - websocket-client=1.6.2=pyhd8ed1ab_0
   - werkzeug=2.3.7=pyhd8ed1ab_0
-  - wheel=0.41.1=pyhd8ed1ab_0
+  - wheel=0.41.2=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb547adb_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.6=h57fd34a_0
@@ -248,5 +248,5 @@ dependencies:
   - zeromq=4.3.4=hbdafb3b_1
   - zipp=3.16.2=pyhd8ed1ab_0
   - zlib=1.2.13=h53f4e23_5
-  - zstd=1.5.2=h4f39d0f_7
+  - zstd=1.5.5=h4f39d0f_0
 prefix: /opt/homebrew/Caskroom/miniconda/base/envs/cs224n
